[package]
name = "bitcoin_yuki"
version = "0.0.2"
authors = ["buffrr <contact@buffrr.dev>", "Rob <rustaceanrob@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A light Bitcoin node"
repository = "https://github.com/imperviousinc/yuki"
readme = "README.md"
keywords = ["bitcoin", "cryptography", "network", "peer-to-peer"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"]  }
bitcoin = { version = "0.32.5", default-features = false, features = [
    "rand-std", "serde"
] }
bip324 = { version = "0.6.0", default-features = false, features = [
    "std",
    "alloc",
    "tokio",
] }
tokio = { version = "1.37", default-features = false, features = [
    "rt-multi-thread",
    "sync",
    "time",
    "io-util",
    "net",
    "macros",
    "signal",
    "fs"
] }

serde_json = "1.0.140"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3.31"


# Optional dependencies
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
arti-client = { version = "0.21.0", features = [
    "rustls",
    "tokio",
    "onion-service-client",
    "experimental-api",
], default-features = false, optional = true }
tor-rtcompat = { version = "0.21.0", features = ["tokio"], optional = true }
jsonrpsee = { version = "0.22.5", features = ["server", "http-client", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
tokio-util = "0.7.11"
env_logger = "0.11.7"
anyhow = "1.0.97"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = { version = "0.4.0" }

[features]
default = ["database", "filter-control"]
database = ["rusqlite"]
tor = ["arti-client", "tor-rtcompat"]
filter-control = []

[dev-dependencies]
corepc-node = { version = "0.5.0", default-features = false, features = [
    "28_0",
] }
tempfile = "3"
tokio = { version = "1.37", default-features = false, features = [
    "full",
] }

[lib]
name = "yuki"
path = "src/lib.rs"

[[bin]]
name = "yuki"
path = "bin/yuki.rs"
required-features = ["filter-control"]
